--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-Hello World
-<a href="weather-pwa/1-12-skeleton/"> Weather PWA Skeleton</a>
+<h1> Test Projects </h1>
+<ul>
+<li><h3> <a href="weather-pwa/1-12-skeleton/" target="_blank"> Weather PWA Skeleton</a> </h3></li>
+</ul>
