--- a/weather-pwa/1-30/index.html
+++ b/weather-pwa/1-30/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Weather App for UD811">
   <title>Weather</title>
-  <link rel="stylesheet" type="text/css" href="/styles/ud811.css">
+  <link rel="stylesheet" type="text/css" href="styles/ud811.css">
 </head>
 <body>
 
@@ -142,8 +142,8 @@
     </svg>
   </div>
 
-  <script src="/scripts/app.js"></script>
-  <script src="/scripts/localforage-1.4.0.js"></script>
+  <script src="scripts/app.js"></script>
+  <script src="scripts/localforage-1.4.0.js"></script>
   
 </body>
 </html>
