--- a/pwa-training/service-worker-lab/app/index.html
+++ b/pwa-training/service-worker-lab/app/index.html
@@ -42,7 +42,7 @@ limitations under the License.
       (function() {
         'use strict';
 
-        // TODO - 2: Register the service worker -- test
+        // TODO - 2: Register the service worker -- test2
 
       })();
     </script>
