--- a/pwa-training/service-worker-lab/app/index.html
+++ b/pwa-training/service-worker-lab/app/index.html
@@ -42,7 +42,18 @@ limitations under the License.
       (function() {
         'use strict';
 
-        // TODO - 2: Register the service worker -- test2
+        // TODO - 2: Register the service worker
+        if (!('serviceWorker' in navigator)) {
+            console.log('Servie worker not supported');
+            return;
+        }
+        navigator.serviceWorker.register('service-worker.js')
+        .then(function(){
+            console.log('Registered');
+        })
+        .catch(function(error){
+            console.log('Registration failed', error);
+        })
 
       })();
     </script>
