--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1> Test Projects </h1>
 <ul>
-<li><h3> <a href="weather-pwa/current/" target="_blank"> Weather PWA Skeleton</a> </h3></li>
+<li><h3> <a href="weather-pwa/current/" target="_blank"> Weather PWA Skeleton tst</a> </h3></li>
 </ul>  
