--- a/google-maps-api/04_Hello_Map_Quiz.html
+++ b/google-maps-api/04_Hello_Map_Quiz.html
@@ -2,26 +2,34 @@
 API Course, Lesson 1 -->
 <html>
  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
  <!-- styles put here, but you can include a CSS file and reference it instead! -->
    <style type="text/css">
      html, body { height: 100%; margin: 0; padding: 0; }
-     #map { height: 100%; }
+     #map { height: 100%; width: 100%;}
    </style>
  </head>
  <body>
    <!-- TODO 1: Create a place to put the map in the HTML-->
-   <div></div>
+   <div id="map">
+   </div>
    <script>
      // TODO: Create a map variable
-
+     var map;
+     
      // TODO: Complete the following function to initialize the map
      function initMap() {
        // TODO: use a constructor to create a new map JS object. You can use the coordinates
        // we used, 40.7413549, -73.99802439999996 or your own!
+       map = new new google.maps.Map(document.getElementById('map'), {
+         center:{lat:40.7413549, lng: -73.99802439999996 },
+         zoom: 13
+       });
      }
    </script>
    <!--TODO: Load the JS API ASYNCHRONOUSLY below.-->
-   <script>
+   <script async defer
+       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHnTMkFzBuCPJ5EZ_hpLBTEjzXjcCT-Kc&callback=initMap">
    </script>
  </body>
 </html>
