--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1> Test Projects </h1>
 <ul>
-<li><h3> <a href="weather-pwa/current/" target="_blank"> Weather PWA Skeleton te!!!!st</a> </h3></li>
+<li><h3> <a href="weather-pwa/current/" target="_blank"> Udacity Course Weather PWA</a> </h3></li>
+<li><h3> <a href="pwa-training/" target="_blank"> Google Develoeprs Course</a> </h3></li>
 </ul>  
