--- a/amp-advanced/article.amp.html
+++ b/amp-advanced/article.amp.html
@@ -6,6 +6,8 @@
 
     <link rel="canonical" href="/article.html">
     <link rel="shortcut icon" href="amp_favicon.png">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
+    
 
     <title>News Article</title>
 
@@ -37,6 +39,28 @@
       }
      amp-fit-text {
        white-space: normal;
+}
+.home-button {
+  float: left;
+}
+.sub-menu {
+  background: black;
+}
+
+.sub-menu a {
+  display: block;
+  background: tomato;
+  margin: 5px;
+  padding: 5px;
+  color: white;
+  text-decoration: none;
+}
+
+body {
+  width: auto;
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
 }
     </style>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -82,8 +106,21 @@
   </head>
   <body>
     <header>
+    <a href="homepage.html">
+    <amp-img class="home-button" src="icons/home.png" width="36" height="36"></amp-img>
+  </a>
       News Site
     </header>
+    <div class="sub-menu">
+  <amp-carousel layout="fixed-height" height="38" type="carousel">
+    <a href="#example1">Example 1</a>
+    <a href="#example2">Example 2</a>
+    <a href="#example3">Longer Named Example 3</a>
+    <a href="#example4">Example 4</a>
+    <a href="#example5">Example 5</a>
+    <a href="#example6">Example 6</a>
+  </amp-carousel>
+</div>
     <article>
       <h1>Article Name</h1>
 
