--- a/amp-interactive/static/index.html
+++ b/amp-interactive/static/index.html
@@ -28,6 +28,8 @@ limitations under the License.
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
+  <script async custom-element="amp-bind"
+    src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
 
   <style amp-custom>
     /*** uncss> filename: https://code.getmdl.io/1.3.0/material.indigo-pink.min.css ***/
@@ -140,6 +142,14 @@ limitations under the License.
 </head>
 
 <body>
+<amp-state id="selected">
+  <script type="application/json">
+    {
+      "slide": 0
+    }
+  </script>
+</amp-state>
+
   <header id="header" class="mdl-color--black mdl-color-text--white">
     <amp-img class="menu" src="./img/ic_menu_white_24dp_1x.png" width=24 height=24></amp-img>
     <span class="mdl-color-text--blue">AMP</span>PAREL
@@ -151,7 +161,8 @@ limitations under the License.
     <h6 class="rating"><span class="mdl-color-text--red">★★★★☆</span> <span class="mdl-color-text--grey">(14)</span></h6>
 
     <!-- TODO: "Add a slide indicator" -->
-    <amp-carousel type="slides" layout="fixed-height" height=250 id="carousel">
+    <amp-carousel type="slides" layout="fixed-height" height=250 id="carousel"
+       on="slideChange:AMP.setState({selected: {slide: event.index}})">
       <!-- TODO: "Changing images in amp-carousel" -->
       <amp-img width=200 height=250 src="./shirts/black.jpg"></amp-img>
       <amp-img width=300 height=375 src="./shirts/black.jpg"></amp-img>
@@ -160,9 +171,9 @@ limitations under the License.
 
     <!-- TODO: "Add a slide indicator" -->
     <p class="dots">
-      <span class="current"></span>
-      <span></span>
-      <span></span>
+        <span [class]="selected.slide == 0 ? 'current' : ''" class="current"></span>
+        <span [class]="selected.slide == 1 ? 'current' : ''"></span>
+        <span [class]="selected.slide == 2 ? 'current' : ''"></span>    
     </p>
 
     <form method="post" action-xhr="/shirts/addToCart" target="_top">
