--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<h1> Test Projects </h1>
+<h1> Code Labs </h1>
+<h2> Web Optimization </h2>
+<ul>
+<li> 
+</ul>
+<h2> AMP </h2>
+<ul>
+<li> <a href='amp-foundations/article.html'> Amp Foundations </a></li>
+<li> <a href='amp-advanced/article.html Amp Advanced'>Amp Advanced</a> </li>
+<li> <a href='amp-interactive/static/index.html'>Amp Interactive</a> </li>
+</ul>
 <ul>
 <li><h3> <a href="weather-pwa/current/" target="_blank"> Udacity Course Weather PWA</a> </h3></li>
 <li><h3> <a href="https://github.com/safwans/safwans.github.io/tree/master/pwa-training" target="_blank"> Google Develoeprs Course</a> </h3></li>
