--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <h1> Code Labs </h1>
 <h2> Web Optimization </h2>
 <ul>
-<li> 
+<li>  
 </ul>
 <h2> AMP </h2>
 <ul>
 <li> <a href='amp-foundations/article.html'> Amp Foundations </a></li>
-<li> <a href='amp-advanced/article.html Amp Advanced'>Amp Advanced</a> </li>
+<li> <a href='amp-advanced/article.html'>Amp Advanced</a> </li>
 <li> <a href='amp-interactive/static/index.html'>Amp Interactive</a> </li>
 </ul>
 <ul>
