--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </ul>
 <h2> AMP </h2>
 <ul>
-<li> <a href='amp-foundations/article.html'> Amp Foundations </a></li>
-<li> <a href='amp-advanced/article.html'>Amp Advanced</a> </li>
-<li> <a href='amp-interactive/static/index.html'>Amp Interactive</a> </li>
+<li> <a href='amp/amp-foundations/article.html'> Amp Foundations </a></li>
+<li> <a href='amp/amp-advanced/article.html'>Amp Advanced</a> </li>
+<li> <a href='amp/amp-interactive/static/index.html'>Amp Interactive</a> </li>
 </ul>
 <ul>
 <li><h3> <a href="weather-pwa/current/" target="_blank"> Udacity Course Weather PWA</a> </h3></li>
