--- a/amp/amp-crm/index.html
+++ b/amp/amp-crm/index.html
@@ -52,12 +52,12 @@
   -->
   <form method="post"
         class="p2"
-        action-xhr="/components/amp-form/submit-form-input-text-xhr"
+        action-xhr="https://api.hubapi.com/contacts/v1/contact/?hapikey=30afcabf-a1d2-413c-b65b-12ced02bc687"
         target="_top">
     <div class="ampstart-input inline-block relative m0 p0 mb3">
       <input type="text"
           class="block border-none p0 m0"
-          name="name"
+          name="firstname"
           placeholder="Name..."
           required>
       <input type="email"
