--- a/amp/amp-crm/index.html
+++ b/amp/amp-crm/index.html
@@ -52,7 +52,7 @@
   -->
   <form method="post"
         class="p2"
-        action-xhr="https://api.hubapi.com/contacts/v1/contact/?hapikey=30afcabf-a1d2-413c-b65b-12ced02bc687"
+        action-xhr="https://yourInstance.salesforce.com/services/data/v20.0/sobjects/Account/"
         target="_top">
     <div class="ampstart-input inline-block relative m0 p0 mb3">
       <input type="text"
