--- a/amp/amp-crm/index.html
+++ b/amp/amp-crm/index.html
@@ -52,7 +52,7 @@
   -->
   <form method="post"
         class="p2"
-        action-xhr="https://yourInstance.salesforce.com/services/data/v20.0/sobjects/Account/"
+        action-xhr="https://na78.salesforce.com/services/data/v20.0/sobjects/Account/"
         target="_top">
     <div class="ampstart-input inline-block relative m0 p0 mb3">
       <input type="text"
