--- a/clients/pearson/maryville.amp.html
+++ b/clients/pearson/maryville.amp.html
@@ -6,7 +6,7 @@
 <!-- ss -->
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta charset="utf-8" />
-<link rel="canonical" href="article.html">
+<link rel="canonical" href="maryville.html">
 <meta name="viewport"
     content="width=device-width, minimum-scale=1, initial-scale=1">
 
