--- a/amp/forms/basicform.html
+++ b/amp/forms/basicform.html
@@ -2,20 +2,19 @@
 <html amp lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="canonical" href="/rossier_online.html">
+  <link rel="canonical" href="basicform.html">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <title>USC Rossier Online</title>
-  <link rel="icon" href="https://ddqt2avvbpaxu.cloudfront.net/cdn/v1/usc-mat/marketing/favicon.ico">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Basic Form</title>
   <script async custom-element="amp-selector" src="https://cdn.ampproject.org/v0/amp-selector-0.1.js"></script>
-<script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
-<script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
-<script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
+  <script async custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js"></script>
+  <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
+  <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.1.js"></script>
+  <script async src="https://cdn.ampproject.org/v0.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  
   
 <style amp-custom>
-
 .page { width: 100%;}
-
 @media (min-width: 600px) {
   .page {
     width: 60%;
@@ -66,10 +65,6 @@ p {
   font-weight: 600;
 }
 
-progress {
-  width: 100%;
-}
-
 .button-content {
   margin: 10px 10px;
   text-align: center;
@@ -96,8 +91,6 @@ button[disabled]{
 
 }
 </style>
-<script async src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 </head>
 
 <body>
@@ -110,7 +103,7 @@ button[disabled]{
 <form method="post"
     action-xhr="https://ampbyexample.com/components/amp-form/submit-form-input-text-xhr"
     target="_top"
-        custom-validation-reporting="as-you-go">
+    custom-validation-reporting="as-you-go">
   <amp-state id="state_slide"> 
   <script
     type="application/json">
@@ -121,8 +114,7 @@ button[disabled]{
        "q4": null,
        "q5": null
       }
-       
-      </script> 
+  </script> 
   </amp-state>
 
   <div class="form-content">
@@ -180,20 +172,13 @@ button[disabled]{
     <div class="hiddencomponent"
     [class]="(state_slide.slide_number == 3) ? 'slide' 
                 : 'hiddencomponent'">
-      <label for="first_name" class="label">First Name</label> 
-      <input
+      <label for="first_name" class="label">First Name</label> <input
         id="first_name" name="first_name" class="text" type="text"
-        required> 
-      <span visible-when-invalid="valueMissing"
-        validation-for="first_name"></span>  
-      <label for="last_name" class="label">Last
+        required> <label for="last_name" class="label">Last
         Name</label> <input id="last_name" name="last_name" class="text"
-        type="text" required> 
-        <label for="email" class="label">Email</label>
+        type="text" required> <label for="email" class="label">Email</label>
         <input id="email" name="email" class="text" type="email"
-        required>
-        <span visible-when-invalid="typeMismatch"
-          validation-for="email"></span> 
+        required> 
         Country of Residence 
         <div>
         <select name="country_code" title="Country" class="dropdown" required>
