--- a/amp/forms/formwizard.html
+++ b/amp/forms/formwizard.html
@@ -110,7 +110,7 @@ button[disabled]{
 <form method="post"
     action-xhr="https://ampbyexample.com/components/amp-form/submit-form-input-text-xhr"
     target="_top"
-        custom-validation-reporting="as-you-go">
+    custom-validation-reporting="as-you-go">
   <amp-state id="state_slide"> 
   <script
     type="application/json">
@@ -180,20 +180,13 @@ button[disabled]{
     <div class="hiddencomponent"
     [class]="(state_slide.slide_number == 3) ? 'slide' 
                 : 'hiddencomponent'">
-      <label for="first_name" class="label">First Name</label> 
-      <input
+      <label for="first_name" class="label">First Name</label> <input
         id="first_name" name="first_name" class="text" type="text"
-        required> 
-      <span visible-when-invalid="valueMissing"
-        validation-for="first_name"></span>  
-      <label for="last_name" class="label">Last
+        required> <label for="last_name" class="label">Last
         Name</label> <input id="last_name" name="last_name" class="text"
-        type="text" required> 
-        <label for="email" class="label">Email</label>
+        type="text" required> <label for="email" class="label">Email</label>
         <input id="email" name="email" class="text" type="email"
-        required>
-        <span visible-when-invalid="typeMismatch"
-          validation-for="email"></span> 
+        required> 
         Country of Residence 
         <div>
         <select name="country_code" title="Country" class="dropdown" required>
