--- a/amp/queryparm/index.html
+++ b/amp/queryparm/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- https://github.com/ampproject/amphtml/blob/master/spec/amp-var-substitutions.md -->
 <html amp lang="en">
 <head>
 <meta charset="utf-8" />
@@ -69,7 +70,7 @@ span {
       <hr/>
       <label>
         <span> 
-          <a href="https://localhost/safwans.github.io/amp/queryparm/index.html?qp=QUERY_PARAM(qp)" data-amp-replace="CLIENT_ID QUERY_PARAM">
+          <a href="https://localhost/safwans.github.io/amp/queryparm/index.html?qp=QUERY_PARAM(qp)" data-amp-replace="QUERY_PARAM">
           Link with Query Paramters</a>
         </span>
       </label>
