--- a/amp/linked-dropdowns/index4.html
+++ b/amp/linked-dropdowns/index4.html
@@ -143,7 +143,9 @@
     <template type="amp-mustache">
     {{sc}}
     </template>
-    <p [text]="'SC ' + sc"> Country </p>
+    <p [text]="'Degree: ' + degreeVal"> Degree </p>
+    <p [text]="'AOS: ' + aosVal"> AOS </p>
+    <p [text]="'Specialization: ' + specialVal"> Specialization </p>
 </div>
 
 </body>
