--- a/amp/queryparm/index2.html
+++ b/amp/queryparm/index2.html
@@ -74,7 +74,7 @@ span {
     </div>
     <div class="content1">
       <h1> Query Paramter Example</h1>
-      <p> add ?qp=value to the url and refresh </p>
+      <p> add ?qp1=value1&qp2=value2 to the url and refresh </p>
       <hr/>
     </div>
 <div>    
