--- a/clients/bell/video_issue.html
+++ b/clients/bell/video_issue.html
@@ -52,5 +52,12 @@ button:disabled, button[disabled] {
   <div class="page">
     <div class="navbar"></div>
   </div>
+  <div>
+  <amp-iframe resizable="" width="16" height="9" layout="responsive" sandbox="allow-scripts allow-same-origin allow-popups allow-presentation" allowfullscreen="" frameborder="0" src="https://ampvideo.ctvnews.ca/videoplayer.html?axisIDs=1484258%2C1484021%2C1483947" class="i-amphtml-element i-amphtml-layout-responsive i-amphtml-layout-size-defined i-amphtml-layout" scrolling="no">
+        <amp-img placeholder="" src="/content/dam/ctvnews/videos/axis/2018/9/9/1484258/_jcr_content/renditions/videothumbnail.1536547544811.jpg" layout="fill" class="i-amphtml-element i-amphtml-layout-fill i-amphtml-layout-size-defined i-amphtml-layout amp-hidden"><img decoding="async" src="./Man killed while trying to stop Toronto flea market robbery_ witnesses_files/videothumbnail.1536547544811.jpg" class="i-amphtml-fill-content i-amphtml-replaced-content"></amp-img>
+        <div overflow="" tabindex="0" role="button" class="iframe-overflow amp-visible" aria-label="Expand">Click to Expand</div>
+    <iframe class="i-amphtml-fill-content" name="amp_iframe0" allowfullscreen="" frameborder="0" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups allow-presentation" src="./Man killed while trying to stop Toronto flea market robbery_ witnesses_files/videoplayer.html" style="z-index: 0;"></iframe></amp-iframe>
+  
+  </div>
 </body>
 </html>
