--- a/clients/bell/bell_video3.html
+++ b/clients/bell/bell_video3.html
@@ -11,10 +11,7 @@
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 </head>
 <body>
-  <div>
-    <div>
-      <div>
-        <amp-iframe resizable width="16" height="16"
+        <amp-iframe resizable width="16" height="9"
           layout="responsive"
           sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
           allowfullscreen="" frameborder="0"
@@ -26,17 +23,8 @@
           aria-label="Expand">Click to
           Expand</div>
         </amp-iframe>
-      </div>
-    </div>
-  </div>
-  <div>
-  <p>
-    Sample Text
-  </p>
-</div>
-<div>
+  <p> Sample Text </p>
    <hr>
    <a href="https://www.ctvnews.ca/canada/man-killed-while-trying-to-stop-toronto-flea-market-robbery-witnesses-1.4086065">Read the original version <span class="arrow_wicon icon-arrow-right-small"></span></a>
-</div>
 </body>
 </html>
