--- a/clients/bell/bell_video3.html
+++ b/clients/bell/bell_video3.html
@@ -14,7 +14,7 @@
         <amp-iframe resizable width="16" height="9"
           layout="responsive"
           sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
-          allowfullscreen="" frameborder="0"
+          allowfullscreen frameborder="0"
           src="https://ampvideo.ctvnews.ca/videoplayer.html?axisIDs=1484258%2C1484021%2C1483947"
           scrolling="no"> <amp-img placeholder=""
           src="https://ampvideo.ctvnews.ca/content/dam/ctvnews/videos/axis/2018/9/9/1484258/_jcr_content/renditions/videothumbnail.1536547544811.jpg"
