--- a/django/JavaScript_Level_One/Part9_JS_Project.html
+++ b/django/JavaScript_Level_One/Part9_JS_Project.html
@@ -51,6 +51,6 @@
   Right now it's connected to Part8.js which contains the solutions</p>
 
   </div>
-  <script src="Part9.js"></script>
+  <script src="myscript.js"></script>
   </body>
 </html>
