--- a/clients/nascar/index2.html
+++ b/clients/nascar/index2.html
@@ -764,7 +764,7 @@ fbq('track', "PageView");
     if ('serviceWorker' in navigator) {
       // Use the window load event to keep the page load performant
       window.addEventListener('load', () => {
-        navigator.serviceWorker.register('sw.js');
+        navigator.serviceWorker.register('sw2.js');
       });
     }
     </script>
