--- a/clients/gie/v9/offline.html
+++ b/clients/gie/v9/offline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head> </head>
 <body> 
-<h1> Page is offline </h1>  
+<h1> Page is offline! </h1>  
 
 <img src='Home.svg'></img>
 
