--- a/clients/gie/v15/index.html
+++ b/clients/gie/v15/index.html
@@ -1763,5 +1763,5 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   </body>
   
-  
+<script src="main.js"></script> 
 </html>
