--- a/pwainstall/index2.html
+++ b/pwainstall/index2.html
@@ -21,6 +21,7 @@
     let deferredPrompt;
   
     window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
       // Stash the event so it can be triggered later.
       deferredPrompt = e;
       //showInstallPromotion();
