--- a/pwainstall/index2.html
+++ b/pwainstall/index2.html
@@ -5,6 +5,16 @@
 <meta id="metaViewport" name="viewport"
   content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
+<!-- Font Awesome -->
+<link rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="css/mdb.min.css" rel="stylesheet">
+<!-- Your custom styles (optional) -->
+<link href="css/style.min.css" rel="stylesheet">
+
 
 <script>
   if ('serviceWorker' in navigator) {
@@ -14,8 +24,8 @@
   }
 </script>
 <body>
-  Test site to study PWA install behavior. 
-  Code present to catch the beforeinstallprompt event
+  Test site to study PWA install behavior. Code present to catch the
+  beforeinstallprompt event
 
   <script type='text/javascript'>
     let deferredPrompt;
